feat(DI): добавлен DI контейнер

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,5 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+/Assets/_TESTS (просто папка с тестами)
+Assets/_TESTS (просто папка с тестами).meta
